--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^27.2.4
   youtube_player_flutter: ^9.1.1
   image_picker: ^1.1.2
+  insta_image_viewer: ^1.0.4
 
 dev_dependencies:
   flutter_test:
