--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   insta_image_viewer: ^1.0.4
   fluttertoast: ^8.2.10
   flutter_launcher_icons: ^0.14.2
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
