--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   file_picker: ^8.1.7
   share_plus: ^10.1.4
   flutter_local_notifications: ^18.0.1
+  connectivity_plus: ^5.0.1
 
 dev_dependencies:
   flutter_test:
