--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   http: ^1.2.2
   webview_flutter: ^4.9.0
   firebase_core: ^3.6.0
-  firebase_messaging: ^15.1.3
+  firebase_messaging: ^15.2.3
   geolocator: ^13.0.1
   location: ^6.0.2
   flutter_native_splash: ^2.4.1
@@ -59,6 +59,7 @@ dependencies:
   file_picker: ^8.1.7
   share_plus: ^10.1.4
   flutter_local_notifications: ^18.0.1
+  firebase_analytics: ^11.4.5
 
 dev_dependencies:
   flutter_test:
