--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: bamis
-description: "A new Flutter project."
+description: "Application for agriculture."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 4.0.0+1
 
 environment:
   sdk: ^3.5.3
@@ -51,7 +51,7 @@ dependencies:
   image_picker: ^1.1.2
   insta_image_viewer: ^1.0.4
   fluttertoast: ^8.2.10
-  flutter_launcher_icons: ^0.14.2
+  flutter_launcher_icons: ^0.14.3
   scrollable_positioned_list: ^0.3.8
   flutter_slidable: ^4.0.0
   flutter_html: ^3.0.0-beta.2
@@ -59,7 +59,7 @@ dependencies:
   html_editor_enhanced: ^2.6.0
   file_picker: ^8.1.7
   share_plus: ^10.1.4
-  flutter_local_notifications: ^19.0.0
+#  flutter_local_notifications: ^19.0.0
   firebase_analytics: ^11.4.5
 
 dev_dependencies:
@@ -76,9 +76,9 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: false
-  image_path: "assets/splash.png"
-  adaptive_icon_foreground: "assets/splash.png"
-  adaptive_icon_background: "#5F8F3C"
+  image_path: "assets/icon.png"
+  adaptive_icon_foreground: "assets/icon.png"
+  adaptive_icon_background: "#FFFFFF"
   remove_alpha_ios: true
   min_sdk_android: 21
 
