--- a/splash.yaml
+++ b/splash.yaml
@@ -28,13 +28,16 @@ flutter_native_splash:
   # It must be a png file. It is supported for Android, iOS and the Web.  For Android 12,
   # see the Android 12 section below.
   # branding: assets/ic_dae.png
+  branding: assets/branding.png
 
   # To position the branding image at the bottom of the screen you can use bottom, bottomRight,
   # and bottomLeft. The default values is bottom if not specified or specified something else.
   #branding_mode: bottom
+  branding_mode: bottom
 
   # Set the branding padding from the bottom of the screen.  The default value is 0
   # branding_bottom_padding: 24
+  branding_bottom_padding: 24
 
   # The color_dark, background_image_dark, image_dark, branding_dark are parameters that set the background
   # and image when the device is in dark mode. If they are not specified, the app will use the
@@ -67,6 +70,7 @@ flutter_native_splash:
 
     # The branding property allows you to specify an image used as branding in the splash screen.
     # branding: assets/ic_dae.png
+    branding: assets/branding.png
 
     # The image_dark, color_dark, icon_background_color_dark, and branding_dark set values that
     # apply when the device is in dark mode. If they are not specified, the app will use the
